# 2025H-420-930-MA-Data

./: README.md  pyproject.toml
src/Data/: binarytree.py  deque.py  fifo.py  hashtable.py  lifo.py  linkedlist.py  tree.py
tests/: test_deque.py  test_fifo.py  test_lifo.py  test_linkedlist.py
